--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@ body
   height: 100svh;
   width: 100svw;
   background-color: cadetblue;
+  background-image: url('https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_640.jpg');
+  background-repeat:no-repeat;
+  background-size: cover;
   margin: 0 auto;
   padding: 0 auto;
   display: flex;
@@ -54,8 +57,7 @@ h1 {
   width: 99%;
   height: 99vh;
   position: relative;
-  
-  color: #fff;
+  color: #ffffff80;
   border-radius: 5px;
   border-top-right-radius: 29px;
 }
@@ -63,7 +65,7 @@ h1 {
 .WeatherApp:before 
 {
   content: '';
-  background: url('./assets/sunset.jpg') no-repeat center center/cover;
+  /* background: url('./assets/sunset.jpg') no-repeat center center/cover; */
   position: absolute;
   width: 100%;
   height: 100%;
@@ -75,14 +77,34 @@ h1 {
 
 .WeatherApp#dark
 {
-  background-color: rgba(0, 0, 0, 0.795);
+  background-color: rgba(0, 0, 0, 0.45);
 
+}
+
+.WeatherApp#dark input::placeholder
+{
+  color: #e4e4e4;
+}
+
+.WeatherApp#dark input
+{
+  color: #e4e4e4;
 }
 
 .WeatherApp#light
 {
-  background-color: rgba(235, 235, 235, 0.795);
+  background-color: rgba(235, 235, 235, 0.45);
   color: black;
+}
+
+.WeatherApp#light input::placeholder
+{
+  color: #000000;
+}
+
+.WeatherApp#light input
+{
+  color: #000000;
 }
 
 
