--- a/src/components/components.css
+++ b/src/components/components.css
@@ -23,14 +23,13 @@
 
 .WeatherApp .search 
 {    
-  position: absolute;
-  right: 32px;
+  /* position: relative; */
 
-  width: 80%;
-  display: flex;
-  transform: translateY(128%);
+
+  /* width: 100%; */
+  display: flex;  
   text-align: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   
   font-size: 32px;
   gap: 10px;
@@ -183,15 +182,9 @@ input:focus
   position: relative;
   display: flex;
   flex-direction: row;
-  
-  top: 2%;
-  margin: 16px auto;
 
-  justify-content: center; 
-
-  padding: 0 1rem;  
-  max-width: 100%;
-  height: 460px;
+  width: 100%;
+  height: 100%;
   gap: 16px;
 
 
@@ -274,6 +267,43 @@ input:focus
     display: hidden;
 
     gap: 10px;
+}
+
+.v-scroll
+{
+    margin-top: 0.5rem;
+    padding: 4px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: start;    
+
+    width: 98%;
+    height: 128px;
+
+    border-top: solid 1px whitesmoke;
+    /* background: #f8f8f827;    */    
+    /* overflow-x: scroll;
+    scroll-behavior: smooth; */
+    display: hidden;
+
+    gap: 10px;
+}
+
+.v-scroll ul
+{
+    align-items: end;
+    float: right;
+}
+
+.v-scroll .box
+{
+    width: 100%;
+    display: flex;
+    padding: 8px 32px;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .box
