--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ body
 
 #root 
 {
+  position: absolute;
+  top:0;
   /* max-width: 1280px; */
   height: 100svh;
   width: 100svw;
@@ -55,8 +57,9 @@ h1 {
 .WeatherApp 
 {
   width: 99%;
-  height: 99vh;
+  /* height: 99vh; */
   position: absolute;
+  top: 4px;
   left: 8px;
   color: #ffffff80;
   border-radius: 5px;
@@ -66,12 +69,31 @@ h1 {
 .container 
 {
   position: relative;
-  display: flex;
-  /* flex-direction: row; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
 
-  width: 100%;
-  height: 100%;
-  gap: 16px;
+.grid-item 
+{
+  background-color: #eeeeee25;
+  padding: 0px;
+}
+
+/* Reverse columns on mobile */
+@media (max-width: 768px) 
+{
+  .container 
+  {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: dense;
+  }
+  .grid-item:nth-child(2) {
+    grid-column: 1;
+  }
+  .grid-item:nth-child(1) {
+    grid-column: 2;
+  }
 }
 
 /* Mobile styles (max-width: 768px) */
@@ -89,25 +111,20 @@ h1 {
   .Main 
   {
     padding: 5px;
-    /* flex-direction: column; */
+    flex-direction: column;
   }
   .container 
-  {
-    top: 10px;
-    left: 0;
-
-    flex-direction: column;
-    width: 90%;
+  {  
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: dense;
+    width: 97%;
     /* margin: 20px auto; */
   }
 
-  .r-aside
+  #r-aside
   {
     padding: 0;
     margin: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100svw;
   }
 }
@@ -128,12 +145,12 @@ h1 {
 
   .Main 
   {
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
   }
   .container 
   {
-    width: 100vw;
+    /* width: 100vw; */
     /* margin: 30px auto; */
   }
 }
