--- a/src/App.css
+++ b/src/App.css
@@ -57,102 +57,29 @@ h1 {
 .WeatherApp 
 {
   width: 99%;
-  /* height: 99vh; */
+  height: 99vh;
   position: absolute;
   top: 4px;
   left: 8px;
   color: #ffffff80;
   border-radius: 5px;
   border-top-right-radius: 29px;
+  
 }
 
 .container 
 {
   position: relative;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 60% 40%;
   grid-gap: 10px;
+  height: 95%;
 }
 
 .grid-item 
 {
   background-color: #eeeeee25;
   padding: 0px;
-}
-
-/* Reverse columns on mobile */
-@media (max-width: 768px) 
-{
-  .container 
-  {
-    grid-template-columns: 1fr 1fr;
-    grid-auto-flow: dense;
-  }
-  .grid-item:nth-child(2) {
-    grid-column: 1;
-  }
-  .grid-item:nth-child(1) {
-    grid-column: 2;
-  }
-}
-
-/* Mobile styles (max-width: 768px) */
-@media only screen and (max-width: 768px) 
-{
-  *{
-    padding: 0;
-    margin: 0;
-  }
-  .WeatherApp 
-  {
-    left: 2px;
-    font-size: 16px;
-  }
-  .Main 
-  {
-    padding: 5px;
-    flex-direction: column;
-  }
-  .container 
-  {  
-    grid-template-columns: 1fr 1fr;
-    grid-auto-flow: dense;
-    width: 97%;
-    /* margin: 20px auto; */
-  }
-
-  #r-aside
-  {
-    padding: 0;
-    margin: 0;
-    width: 100svw;
-  }
-}
-
-/* Tablet styles (max-width: 1024px) */
-@media only screen and (max-width: 1024px) 
-{
-  .WeatherApp 
-  {
-    font-size: 18px;
-  }
-
-  .Header
-  {
-    padding: 0.32px;
-  }
-  
-
-  .Main 
-  {
-    flex-direction: column;
-    /* flex-wrap: wrap; */
-  }
-  .container 
-  {
-    /* width: 100vw; */
-    /* margin: 30px auto; */
-  }
 }
 
 /*.WeatherApp:before 
@@ -212,7 +139,7 @@ h1 {
   justify-content: start;
   
   width: 94%;
-  height: 88%;
+  height: 7%;
   /* margin: 1rem 0rem 16px 2rem; */
   padding: 2px 2%;
   border-radius: 5px;
@@ -276,8 +203,8 @@ h1 {
 .Main
 {
   width: 100%;
-  height: 100vh;
-  display: flex;
+  height: 99%;
+  /* display: flex; */
   padding: 5px
 }
 
@@ -347,13 +274,13 @@ h1 {
 
 
 
-.l-aside
+#l-aside
 {
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: end;
-    padding-top: 8px;
+    padding-top: 16px;
     
     flex: 1;
     /* width: 500px; */
@@ -364,9 +291,9 @@ h1 {
 }
 
 
-.r-aside
+#r-aside
 {      
-  width: 400px;
+  max-width: 500px;
   height: 99%;
   /* background: #f3f3f360; */
   background: #6969690c;
