--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-:root {
+:root 
+{
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -13,16 +14,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+a 
+{
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+a:hover 
+{
   color: #535bf2;
 }
 
-body {
+body
+{
   margin: 0;
   display: flex;
   place-items: center;
@@ -30,12 +34,14 @@ body {
   min-height: 100vh;
 }
 
-h1 {
+h1 
+{
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
+button 
+{
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0;
@@ -64,5 +70,135 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+/* Reverse columns on mobile */
+@media (max-width: 768px) 
+{
+  .container 
+  {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: dense;
+  }
+
+  .WeatherApp .TempNotherDetails 
+  {
+    height: 10%;
+    width: 97%;
+  }
+  .TempNotherDetails .tempNclouds 
+  {
+    padding: 0;
+  }
+  .grid-item:nth-child(2) {
+    grid-column: 1;
+
+    /* height: 100px; */
+    transform: translateY(-32px);
+  }
+  .grid-item:nth-child(1) {
+    grid-column: 1;
+    /* height: 200px; */
+    width: 95svw;  
+  }
+
+  .title
+  {
+    display: none;
+  }
+
+  .grid-item:nth-child(2) .h-scroll
+  {    
+    overflow-x: scroll;    
+  }
+
+  .daily
+  {
+    /* background-color: #646cff; */
+    display: flex;
+    flex-direction: column;
+  }
+
+  .daily .v-scroll
+  {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    height: 200px;
+  }
+
+  .v-scroll .box
+  {
+    padding: 10px;
+    width: 128px;
+    height: 128px;
+    flex-wrap: wrap;
+    gap: 1px;
+    background: #f9f9f9c7;
+  }
+
+  /* .h-scroll::-webkit-scrollbar 
+  {
+    display: none; 
+  } */
+}
+
+/* Mobile styles (max-width: 768px) */
+@media only screen and (max-width: 768px) 
+{
+  *{
+    padding: 0;
+    margin: 0;
+  }
+  .WeatherApp 
+  {
+    left: 2px;
+    font-size: 16px;
+  }
+  .Main 
+  {
+    padding: 5px;
+    flex-direction: column;
+  }
+  .container 
+  {  
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: dense;
+    width: 97%;
+    /* margin: 20px auto; */
+  }
+
+  #r-aside
+  {
+    padding: 0;
+    margin: 0;
+    width: 100svw;
+  }
+}
+
+/* Tablet styles (max-width: 1024px) */
+@media only screen and (max-width: 1024px) 
+{
+  .WeatherApp 
+  {
+    font-size: 18px;
+  }
+
+  .Header
+  {
+    padding: 0.32px;
+  }
+  
+
+  .Main 
+  {
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+  }
+  .container 
+  {
+    /* width: 100vw; */
+    /* margin: 30px auto; */
   }
 }
