--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  max-width: 100vw;
 }
 
 
@@ -49,7 +50,7 @@
 .TempNotherDetails .tempNclouds
 {
   width: 100%;
-  padding: 16px;
+  padding: 8px;
   display: flex;
   justify-content: center;
 }
@@ -58,6 +59,7 @@
 {
   display: flex;
   flex-direction: column;
+  width: 100%;  
 }
 
 .highlights
@@ -67,6 +69,9 @@
  
   width: 96%;
   height: 54px;
+
+  justify-content: center;
+  align-items: center;
 
   margin: 1px 8px;
   padding: 0rem 0rem 0rem 0rem;  
@@ -91,9 +96,15 @@
   font-size: 12px;  
   text-align: center;  
   width: 128px;
-  border: 1px whitesmoke solid; 
+  border: 1px rgb(95, 95, 95) solid; 
   border-radius: 5px;
 
+}
+
+.hl-box .h-block
+{
+    display:flex;
+    justify-content:center;
 }
 
 .Main
@@ -109,7 +120,7 @@
   display: flex;
 }
 
-.WeatherApp .cloud p
+.cloud p
 {
   margin-left: 16px;  
   transform: translateX(16px) rotate(269deg);
@@ -126,10 +137,9 @@
 }
 
 .fc_coverImg
-{
-  width: 100%;
+{  
   text-align: center;
-  font-size: 20px;
+  font-size: 32px;
 }
 
 .feels
@@ -152,7 +162,7 @@
 {
   display: flex;
   
-  font-size: 10px;
+  font-size: 14px;
   margin-right: 10px;
   margin-left: -36px;
   
@@ -163,7 +173,7 @@
 #cover-dir .wind-dir
 {
   position: relative;
-  top: -64px;
+  top: -84px;
   right: 0px;
   font-size: 32px;
 }
