--- a/src/App.css
+++ b/src/App.css
@@ -45,21 +45,47 @@
   color: #f8f8f8;
 }
 
+.TempNotherDetails .title
+{
+  width: 100%;
+  text-align: start;
+  font-size: 11px;
+  color: azure;
+  margin-bottom: 8px;
+  padding-left: 32px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
 
 .TempNotherDetails .tempNclouds
 {
   width: 100%;
-  padding: 8px;
+  padding: 32px 32px 16px 36px;
   display: flex;
-  justify-content: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: azure;
+  border-radius: 8px;
 }
 
-.TempNotherDetails .highlights-container
+.highligts-container
 {
   display: flex;
-  flex-direction: column;
-  width: 100%;  
+  flex-direction: column;  
+  margin-left: 8px;
+  padding: 8px;
+  width: max-content;  
+  background: rgba(215, 228, 228, 0.993);
+  border-radius: 8px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.tempNclouds .cloud-des
+{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-left: -32px;
 }
 
 .highlights
@@ -68,17 +94,17 @@
   flex-direction: row; 
  
   width: 96%;
-  height: 54px;
+  /* height: 86px; */
 
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
-  margin: 1px 8px;
+  margin: 1px 32px;
   padding: 0rem 0rem 0rem 0rem;  
 
   border-radius: 0px;
   background-color: rgba(255, 255, 255, 0);
-  gap: 8px;
+  gap: 16px;
 }
 
 .bold 
@@ -91,20 +117,36 @@
 
 .highlights .hl-box
 {
-  align-self: flex-end;
+  /* align-self: flex-end; */
   padding: 0px 2px; 
   font-size: 12px;  
-  text-align: center;  
-  width: 128px;
-  border: 1px rgb(95, 95, 95) solid; 
+  text-align: start;  
+  /* width: 75px; */
+  /* height: 100%; */
+  /* border: 1px rgb(95, 95, 95) solid;  */
   border-radius: 5px;
 
 }
 
 .hl-box .h-block
 {
-    display:flex;
-    justify-content:center;
+  display:flex;
+  flex-direction: column;    
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+.h-block .h
+{
+  font-size: 14px;
+}
+
+.h-block .body p
+{
+  margin-top: 2px;
+  font-size: 18px;
+  font-weight: 600;
+  
 }
 
 .Main
@@ -142,16 +184,6 @@
   font-size: 32px;
 }
 
-.feels
-{
-  font-size: 12px;
-}
-
-.feels strong
-{
-  margin-left: 16px;
-}
-
 .WeatherApp .description 
 {   
   margin-top: -10px; 
@@ -161,6 +193,7 @@
 #cover-dir 
 {
   display: flex;
+  height: 32px;
   
   font-size: 14px;
   margin-right: 10px;
@@ -176,6 +209,28 @@
   font-size: 32px;
 }
 
+
+.feels-like
+{
+  margin-top: 9px;
+}
+
+.feels-like .temp
+{
+  text-align: start;
+  
+}
+
+.feels
+{
+  font-size: 12px;
+}
+
+.feels strong
+{
+  margin-left: 4px;
+  font-size: 11px;
+}
 
 
 
