--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     "column1 column2";
   grid-template-columns: 2fr 1fr; /* Column 1 is twice the width of Column 2 */
   grid-template-rows: auto; /* Adjust row height dynamically */
-  gap: 10px;
+
   padding: 10px;
 }
 
@@ -19,7 +19,6 @@
 
   background: #4caf50;
   color: white;
-  /* text-align: center; */
   padding: 10px;
   font-size: 1.5rem;
 }
@@ -28,23 +27,23 @@
   grid-area: column1;
   display: grid;
   grid-template-rows: auto 1fr 0fr;
-  gap: 10px;
+  gap: 2px;
 }
 
 .column1-header 
 {
   display: flex;
-  flex-direction: column;
-  background: #2195f341;
+  flex-direction: row;
+  gap: 16px;
   color: white;
-  padding: 10px;
-  margin-top: 16px;
-  text-align: center;
+  padding: 8px 32px;
+  margin-top: 8px;
+
 }
 
 .column1-body1
 {
-  background: #ffffff57;
+  
   padding: 10px;
   text-align: center;
   height: 325px
@@ -152,7 +151,7 @@
       "column1"
       "column2";
     grid-template-columns: 1fr; /* Stack columns vertically */
-    height: 100svh;
+    /* height: 100svh; */
     width: 100svw;
     overflow-y: scroll;
     padding: 0;
@@ -162,6 +161,7 @@
   {
     flex-direction: row ;
     width: 100%;
+    height: max-content;
   }
 
   .h-scroll
