--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    width: 100vw;
     background-color: rgb(173, 173, 173); /* Add variables for theming */
     color: var(--text-color);
     padding: 8px 16px;
