--- a/src/components/Cards/MainWeatherCard/MainWeatherCard.css
+++ b/src/components/Cards/MainWeatherCard/MainWeatherCard.css
@@ -5,7 +5,7 @@
 
     display: flex;
     flex-direction: column;
-    background-color: var(--color-background);
+    background-color: var(--color-background, );
     box-shadow: var(--shadow);
 }
 
